--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
   "name": "yt-script-ai-agent-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
+  "description": "Backend API for YouTube Script AI Agent",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --loader ts-node/esm src/index.ts",
+    "dev": "ts-node-dev --esm src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "eslint src --ext .ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zaraakhtar/yt-script-AI-agent-backend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zaraakhtar/yt-script-AI-agent-backend/issues"
-  },
-  "homepage": "https://github.com/zaraakhtar/yt-script-AI-agent-backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "youtube-transcript": "^1.2.1",
-    "youtubei.js": "^15.1.1"
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "openai": "^4.20.1",
+    "uuid": "^9.0.1",
+    "xml2js": "^0.6.2",
+    "youtubei.js": "^10.0.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.3.1",
+    "@types/cors": "^2.8.15",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.8.0",
+    "@types/uuid": "^9.0.6",
+    "@types/xml2js": "^0.4.14",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.2.2"
   }
 }
