--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "yt-script-ai-agent-backend",
   "version": "1.0.0",
   "type": "module",
-  "description": "Backend API for YouTube Script AI Agent",
-  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --esm src/index.ts",
+    "dev": "tsx watch ./src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts"
+    "start": "node dist/index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
@@ -21,12 +19,14 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
-    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.8.0",
-    "@types/uuid": "^9.0.6",
-    "@types/xml2js": "^0.4.14",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
