--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch ./src/index.ts",
+    "dev": "tsx watch --env-file=.env ./src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -15,7 +15,8 @@
     "openai": "^4.20.1",
     "uuid": "^9.0.1",
     "xml2js": "^0.6.2",
-    "youtubei.js": "^10.0.0"
+    "youtube-captions-scraper": "^2.0.3",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
