--- a/package.json
+++ b/package.json
@@ -1,32 +1,12 @@
 {
-  "name": "yt-script-ai-agent-backend",
+    "name": "ai-script-agent-monorepo",
+  "private": true,
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "tsx watch --env-file=.env ./src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "backend": "npm run dev --workspace=packages/backend",
+    "mobile": "npm start --workspace=packages/mobile-app"
   },
-  "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.18.2",
-    "openai": "^4.20.1",
-    "uuid": "^9.0.1",
-    "xml2js": "^0.6.2",
-    "youtube-transcript-plus": "^1.1.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.8.0",
-    "@types/uuid": "^10.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
-  },
-  "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
