--- a/packages/mobile-app/tsconfig.json
+++ b/packages/mobile-app/tsconfig.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
+      // THE FIX: This tells the project that "@/" means "./src/"
       "@/*": [
-        "./*"
+        "./src/*"
       ]
     }
   },
